k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-app
  namespace: latihan
  labels:
    app: elearning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elearning
  template:
    metadata:
      labels:
        app: elearning
    spec:
      containers:
        - name: app
          image: zambo123/elearning-madrasah:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sqlite-data
              mountPath: /data
            - name: app-storage
              mountPath: /var/www/storage
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

      volumes:
        - name: sqlite-data
          emptyDir: {}
        - name: app-storage
          emptyDir: {}
