k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elearning-service
  namespace: latihan
spec:
  selector:
    app: elearning
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
