k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elearning-ingress
  namespace: latihan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: elearning.latihan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elearning-service
                port:
                  number: 80
